@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19900124
+MANIFEST for cm_tools, version t19900207
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
